--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.3
   firebase_database: ^10.5.1
+  firebase_storage: ^11.1.1
+  cloud_firestore: ^4.7.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
